--- a/packages/helloworlds/manifest.yaml
+++ b/packages/helloworlds/manifest.yaml
@@ -1,7 +1,7 @@
-package:
-  name: helloworlds
-  actions:
-    hello-js:
-      function: src/hello.js
-    helloworld-js:
-      function: src/helloworld.js
+packages:
+    helloworlds:
+        actions:
+            hello-js:
+                function: src/hello.js
+            helloworld-js:
+                function: src/helloworld.js
